--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -47,6 +47,24 @@
     gap: 5px;
 }
 
+.event-card-img{
+    width: 100%;
+    height: 158px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.event-card-img.card-header {
+    background-color: #FFF!important;
+}
+
+.event-card-img img{
+    width: 100%;
+    height: auto;
+    max-height: 100%;
+}
+
 .event-card-content h3 {
     font-size: 20px;
 }
@@ -61,6 +79,11 @@
     flex-direction: column;
     gap: 10px;
 }
+
+.event-form .form-floating > input:focus{
+    box-shadow: unset;
+}
+
 
 .event-form label,
 .event-form select .selected,
@@ -80,7 +103,15 @@
 }
 
 .flex-event-address > div:first-child {
-    width: 73%;
+    width: 60%;
+}
+
+.flex-event-address > div:nth-child(2) {
+    width: 20%;
+}
+
+.flex-event-address > div:nth-child(3) {
+    width: 19%;
 }
 
 .flex-date-capacity div {
@@ -89,4 +120,32 @@
 
 #description {
     resize: none;
+}
+
+/**/
+
+.event-image {
+    border: 1px solid #ced4da !important;
+}
+
+.file-choose-button {
+    width: 158px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #DFDDDD;
+    font-size: 12px;
+    color: #565656;
+    font-weight: 500 !important;
+    cursor: pointer;
+}
+
+.event-image-cover {
+    width: 105px;
+    height: 90px;
+}
+
+.border-error {
+    border: 1px solid #dc3545 !important;
 }
