--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,17 @@
+/* Preloader */
+.preloader-wrapper {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  background: rgba(0, 0, 0, 0.4);
+  z-index: 1038;
+}
+
+.preloader-wrapper .circlespinner {
+  stroke: #035aff;
+}
+
+
 .logo {
     width: 6% !important;
 }
@@ -149,3 +163,27 @@
 .border-error {
     border: 1px solid #dc3545 !important;
 }
+
+.event-show-image {
+    width: 450px;
+    height: 260px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    border: 1px solid #999999;
+}
+
+.event-show-image img{
+    width: 100%;
+    height: 100%;
+}
+
+.event-show-infos {
+    width: 30%;
+}
+
+.event-show-infos p {
+    font-size: 16px;
+}
+
+
